<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/busFareBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/busBlue"
        android:orientation="vertical"
        tools:context="kr.edcan.buspolis.BusFareSelectActivity">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp">

            <ImageView
                android:id="@+id/icBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bus_fare"
                android:textColor="@android:color/white"
                android:textSize="@dimen/label_text" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2820"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/ex_large_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/small_margin"
                        android:gravity="bottom"
                        android:paddingBottom="@dimen/small_margin"
                        android:text="@string/won"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/default_text" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:paddingBottom="@dimen/small_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/large_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="#44FFFFFF" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textLight"
                android:textSize="@dimen/default_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/info_busfare"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/acc_busfare_gospeak" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomBarBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/main_padding"
            android:weightSum="2">

            <kr.edcan.buspolis.view.CartaTagView
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/selector_border"
                android:clickable="true"
                android:text="@string/close"
                app:fullMode="false"
                app:themeColor="@android:color/white" />

            <kr.edcan.buspolis.view.CartaTagView
                android:id="@+id/speak"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_fill"
                android:clickable="true"
                android:text="@string/speak"
                app:fullMode="true"
                app:textThemeColor="@color/busBlueDark"
                app:textThemeColorEnabled="true"
                app:themeColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>
